--- a/Portafolio/index.html
+++ b/Portafolio/index.html
@@ -54,7 +54,7 @@
           </header>
 <hr>
     <section>
-      <div id="sobre" class="container">
+      <div id="sobre" class="container pt-5 mt-5">
         <div class="row">
           <div class="col-md-12 m-2">
           <h1 class="text-center font-weight-bold">Acerca de mí</h1>
@@ -69,9 +69,11 @@
 
       </div>
 
-  <hr>
+
           <section>
-            <div id="experiencia" class="container">
+
+            <div id="experiencia" class="container pt-5 mt-5">
+                <hr>
               <div class="row">
                 <div class="col-md-12 m-2">
                 <h1 class="text-center font-weight-bold"> Mi Experiencia</h1>
@@ -88,12 +90,12 @@
 
             </div>
     </section>
-    <div class="container my-5 py-3">
+    <div id="trabajo" class="container my-5 py-3">
           <div class="row">
-            <div class="col-4 p-4 text-right">
-              <h2 class="font-weight-bold">Me has visto en:</h2>
+            <div class="col-12 p-4 text-center">
+              <h1 class="font-weight-bold">Mis trabajos</h1>
             </div>
-            <div class="col-8 bg-secondary text-white rounded pt-4 pb-5">
+            <div class="col-12 bg-secondary text-white rounded pt-4 pb-5">
               <div id="blogCarousel" class="carousel slide" data-ride="carousel">
 
                 <ol class="carousel-indicators">
@@ -106,16 +108,16 @@
                   <div class="carousel-item active text-center">
                     <div class="row">
                       <div class="col-3">
-                        <i class="fab fa-codepen fa-2x" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="CodePen"></i>
+                        <a href=""><<img src="assets/img/meet_coffee.png" alt="" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Meet & Coffee" /></im></a>
                       </div>
                       <div class="col-3">
-                        <i class="fab fa-apper fa-2x" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Apper"></i>
+                        <a href=""><<img src="assets/img/iguana_page.png" alt="" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Iguana Page" /></im></a>
                       </div>
                       <div class="col-3">
-                        <i class="fab fa-angrycreative fa-2x" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Angry Creative"></i>
+                        <a href=""><<img src="assets/img/cuppon.png" alt="" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Cuppon" /></im></a>
                       </div>
                       <div class="col-3">
-                        <i class="fab fa-google fa-2x" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Google"></i>
+                        <a href=""><<img src="assets/img/suricata.png" alt="" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Suricata" /></im></a>
                       </div>
                     </div>
                   </div>
@@ -123,16 +125,16 @@
                   <div class="carousel-item text-center">
                     <div class="row">
                       <div class="col-3">
-                        <i class="fab fa-500px fa-2x" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="500px"></i>
+                          <a href=""><<img src="assets/img/ricomida.png" alt="" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Ricomida" /></im></a>
                       </div>
                       <div class="col-3">
-                        <i class="fab fa-apple fa-2x" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Apple"></i>
+                          <a href=""><<img src="assets/img/suricata.png" alt="" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Suricata" /></im></a>
                       </div>
                       <div class="col-3">
-                        <i class="fab fa-aviato fa-2x" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Aviato"></i>
+                        <a href=""><<img src="assets/img/suricata.png" alt="" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Suricata" /></im></a>
                       </div>
                       <div class="col-3">
-                        <i class="fab fa-d-and-d fa-2x" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Dungeons & Dragons"></i>
+                          <a href=""><<img src="assets/img/suricata.png" alt="" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Suricata" /></im></a>
                       </div>
                     </div>
                   </div>
