--- a/index.html
+++ b/index.html
@@ -18,14 +18,13 @@
     <link rel="stylesheet" href="assets/css/style.css">
   </head>
 
-  <body>
-   <nav class="navbar navbar-expand-lg navbar-dark bg-blue fixed-top text-blue ">
-          <div class="container">
-            <a class="navbar-brand" href="#"> <p>Camila Faúndes</p> </a>
-
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
+<body>
+ <nav class="navbar navbar-expand-lg navbar-dark bg-blue fixed-top text-white ">
+     <div class="container align-middle">
+       <a class="navbar-brand href="#"> <p>Camila Faúndes</p> </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+         <span class="navbar-toggler-icon"></span>
+        </button>
 
             <div class="collapse navbar-collapse " id="navbarNav">
               <ul class="navbar-nav ml-auto">
@@ -46,107 +45,150 @@
           </div>
         </nav>
 
-    <header class="hero text-celeste text-left pt-5 mt-5 no-repeat center center fixed">
-            <div class="container">
-              <h1 class="display-3 col-md-6 text-left text-celeste mb-5 "> Psicóloga y futura programadora</h1>
-              <p class="display-4 text-left pt-5 mb-5">Rompiendo límites</p>
-            </div>
-          </header>
-<hr>
+    <header class="hero text-celeste text-left pt-5 mt-5 no-repeat center center fixed img-fluid">
+     <div class="container frase">
+        <h1 class="display-3 col-md-6 text-left text-celeste mb-5 "> Psicóloga y futura programadora</h1>
+          <p class="display-4 text-left pt-5 mb-5">Rompiendo límites</p>
+      </div>
+    </header>
+  <hr>
     <section>
-      <div id="sobre" class="container pt-5 mt-5">
+      <div id="sobre" class="container pt-5 ">
         <div class="row">
           <div class="col-md-12 m-2">
           <h1 class="text-center font-weight-bold">Acerca de mí</h1>
           </div>
-          <div class="col-md-6 p-4">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <div class="col-md-6 p-4 text-left">
+          <p>Soy Camila Faúndes, tengo 28 años y estudié psicología en la Universidad de Chile, y desde el año 2014 que me dedico a la psicología organizacional.</p>
+          <p>Siempre me he descrito como una persona curiosa, siempre buscando nuevas cosas que aprender y hacer, cualidad que desde pequeña me ha llevado a estar constantemente estudiando cosas nuevas, aprendiendo nuevos deportes (aunque sea pésima) o buscando nuevos hobbies. </p>
+        </div>
+          <div class="col-md-6 p-4 text-left">
+          <p>Hoy rompo los límites porque decido sumergirme en un mundo nuevo, lleno de cosas por aprender, un mundo que muchas veces se entiende "sólo para hombres", he roto el límite de los estereotipos de género.</p>
+          <p>He decidido pasar del estudio de la mente humana al estudio del lenguaje de las máquinas, lo que en mi rubro actual, es considerado una locura.... </p>
+        </div>
+        </div>
+       </div>
+
+    <section id="experiencia">
+      <div class="container pt-5 mt-5">
+          <hr>
+        <div class="row">
+          <div class="col-md-12 m-2">
+          <h1 class="text-center font-weight-bold"> Mi Experiencia</h1>
           </div>
-          <div class="col-md-6 p-4">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <div class="col-md-6 p-4 text-center">
+            <i class="fas fa-user-graduate fa-5x"></i>
+            <p>Tengo cinco años de experiencia como psicóloga organizacional, he trabajado en consultoras de recursos humanos, en el rubro industrial y minero. Me he desempeñado siempre en las áreas de personas en las distintas organizaciones donde he trabajado. He manejado procesos de evaluación de desempeño, evaluación de clima laboral, selección de personas y procesos de capacitación. Lo que en el rubro se conoce como Desarrollo organizacional.</p>
+          </div>
+          <div class="col-md-6 p-4 text-center">
+            <i class="fas fa-laptop-code fa-5x"></i>
+            <p>Hoy me encuentro trabajando de manera freelance, asesorando en temas de Recursos Humanos, a una consultora de ingeniería hidraúlica, además de estar estudiando la carrera de Full Stack en la academia Desafio Latam. Donde me estoy sumergiendo en el mundo de la programación, en el cual pretendo trabajar durante los próximos años.</p>
           </div>
         </div>
-
       </div>
+     </section>
 
+    <section id="trabajo">
+      <div class="container my-5 py-3">
+        <div class="row">
+          <div class="col-12 p-4 text-center">
+            <h1 class="font-weight-bold">Mis trabajos</h1>
+          </div>
 
-          <section>
-
-            <div id="experiencia" class="container pt-5 mt-5">
-                <hr>
-              <div class="row">
-                <div class="col-md-12 m-2">
-                <h1 class="text-center font-weight-bold"> Mi Experiencia</h1>
+        <div class="row">
+          <div class="card col-md-4" >
+              <img src="assets/img/meet_coffee.png" alt="" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Meet & Coffee" /></im>
+                <div class="card-body">
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
-                <div class="col-md-6 p-4 text-center">
-                  <i class="fas fa-user-graduate fa-5x"></i>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                </div>
-                <div class="col-md-6 p-4 text-center">
-                  <i class="fas fa-laptop-code fa-5x"></i>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
+
+           <div class="card col-md-4">
+              <img src="assets/img/iguana_page.png" alt="" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Iguana Page" /></im>
+              <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
+            <div class="card col-md-4" >
+               <img src="assets/img/cuppon.png" alt="" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Cuppon" /></im>
+               <div class="card-body">
+               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+             </div>
+             </div>
+
+            <div class="card col-md-4">
+               <img src="assets/img/suricata.png" alt="" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Suricata" /></im>
+               <div class="card-body">
+               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+               </div>
+            </div>
+
+            <div class="card col-md-4">
+                <img src="assets/img/suricata.png" alt="" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Suricata" /></im>
+                <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
               </div>
 
+            <div class="card col-md-4">
+                 <img src="assets/img/suricata.png" alt="" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Suricata" /></im>
+                 <div class="card-body">
+                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                 </div>
+                 </div>
             </div>
-    </section>
-    <div id="trabajo" class="container my-5 py-3">
-          <div class="row">
-            <div class="col-12 p-4 text-center">
-              <h1 class="font-weight-bold">Mis trabajos</h1>
-            </div>
-            <div class="col-12 bg-secondary text-white rounded pt-4 pb-5">
-              <div id="blogCarousel" class="carousel slide" data-ride="carousel">
 
-                <ol class="carousel-indicators">
-                  <li data-target="#blogCarousel" data-slide-to="0" class="active"></li>
-                  <li data-target="#blogCarousel" data-slide-to="1"></li>
-                </ol>
 
-                <div class="carousel-inner">
+      <div class="container my-5 py-3">
+        <div class="row">
+          <div class="col-12 p-4 text-center">
+            <h1 class="font-weight-bold">Mis trabajos</h1>
+          </div>
+          <div class="col-12 bg-secondary text-white rounded pt-4 pb-5">
+          <div id="blogCarousel" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#blogCarousel" data-slide-to="0" class="active"></li>
+              <li data-target="#blogCarousel" data-slide-to="1"></li>
+            </ol>
+              <div class="carousel-inner">
+                    <div class="carousel-item active text-center">
+                      <div class="row">
+                        <div class="col-3">
+                          <a href=""><<img src="assets/img/meet_coffee.png" alt="" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Meet & Coffee" /></im></a>
+                        </div>
+                        <div class="col-3">
+                          <a href=""><<img src="assets/img/iguana_page.png" alt="" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Iguana Page" /></im></a>
+                        </div>
+                        <div class="col-3">
+                          <a href=""><<img src="assets/img/cuppon.png" alt="" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Cuppon" /></im></a>
+                        </div>
+                        <div class="col-3">
+                          <a href=""><<img src="assets/img/suricata.png" alt="" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Suricata" /></im></a>
+                        </div>
+                      </div>
+                    </div>
 
-                  <div class="carousel-item active text-center">
-                    <div class="row">
-                      <div class="col-3">
-                        <a href=""><<img src="assets/img/meet_coffee.png" alt="" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Meet & Coffee" /></im></a>
-                      </div>
-                      <div class="col-3">
-                        <a href=""><<img src="assets/img/iguana_page.png" alt="" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Iguana Page" /></im></a>
-                      </div>
-                      <div class="col-3">
-                        <a href=""><<img src="assets/img/cuppon.png" alt="" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Cuppon" /></im></a>
-                      </div>
-                      <div class="col-3">
-                        <a href=""><<img src="assets/img/suricata.png" alt="" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Suricata" /></im></a>
+                    <div class="carousel-item text-center">
+                      <div class="row">
+                        <div class="col-3">
+                            <a href=""><<img src="assets/img/ricomida.png" alt="" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Ricomida" /></im></a>
+                        </div>
+                        <div class="col-3">
+                            <a href=""><<img src="assets/img/suricata.png" alt="" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Suricata" /></im></a>
+                        </div>
+                        <div class="col-3">
+                          <a href=""><<img src="assets/img/suricata.png" alt="" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Suricata" /></im></a>
+                        </div>
+                        <div class="col-3">
+                            <a href=""><<img src="assets/img/suricata.png" alt="" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Suricata" /></im></a>
+                        </div>
                       </div>
                     </div>
                   </div>
-
-                  <div class="carousel-item text-center">
-                    <div class="row">
-                      <div class="col-3">
-                          <a href=""><<img src="assets/img/ricomida.png" alt="" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Ricomida" /></im></a>
-                      </div>
-                      <div class="col-3">
-                          <a href=""><<img src="assets/img/suricata.png" alt="" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Suricata" /></im></a>
-                      </div>
-                      <div class="col-3">
-                        <a href=""><<img src="assets/img/suricata.png" alt="" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Suricata" /></im></a>
-                      </div>
-                      <div class="col-3">
-                          <a href=""><<img src="assets/img/suricata.png" alt="" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Suricata" /></im></a>
-                      </div>
-                    </div>
-                  </div>
-
                 </div>
               </div>
             </div>
           </div>
-        </div>
-
-    <section>
-
     </section>
 
     <section>
