--- a/index.html
+++ b/index.html
@@ -96,42 +96,42 @@
           </div>
 
         <div class="row">
-          <div class="card col-md-4" >
+          <div class="card col-md-4 mt-3" >
               <img src="assets/img/meet_coffee.png" alt="" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Meet & Coffee" /></im>
                 <div class="card-body">
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
           </div>
 
-           <div class="card col-md-4">
+           <div class="card col-md-4 mt-3">
               <img src="assets/img/iguana_page.png" alt="" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Iguana Page" /></im>
               <div class="card-body">
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               </div>
             </div>
-            <div class="card col-md-4" >
+            <div class="card col-md-4 mt-3" >
                <img src="assets/img/cuppon.png" alt="" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Cuppon" /></im>
                <div class="card-body">
                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
              </div>
              </div>
 
-            <div class="card col-md-4">
+            <div class="card col-md-4 mt-3">
                <img src="assets/img/suricata.png" alt="" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Suricata" /></im>
                <div class="card-body">
                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                </div>
             </div>
 
-            <div class="card col-md-4">
-                <img src="assets/img/suricata.png" alt="" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Suricata" /></im>
+            <div class="card col-md-4 mt-3">
+                <img src="assets/img/ricomida.png" alt="" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Ricomida" /></im>
                 <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
               </div>
 
-            <div class="card col-md-4">
-                 <img src="assets/img/suricata.png" alt="" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Suricata" /></im>
+            <div class="card col-md-4 mt-3">
+                 <img src="assets/img/dmark.png" alt="" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Dmark" /></im>
                  <div class="card-body">
                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                  </div>
@@ -139,56 +139,7 @@
             </div>
 
 
-      <div class="container my-5 py-3">
-        <div class="row">
-          <div class="col-12 p-4 text-center">
-            <h1 class="font-weight-bold">Mis trabajos</h1>
-          </div>
-          <div class="col-12 bg-secondary text-white rounded pt-4 pb-5">
-          <div id="blogCarousel" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-              <li data-target="#blogCarousel" data-slide-to="0" class="active"></li>
-              <li data-target="#blogCarousel" data-slide-to="1"></li>
-            </ol>
-              <div class="carousel-inner">
-                    <div class="carousel-item active text-center">
-                      <div class="row">
-                        <div class="col-3">
-                          <a href=""><<img src="assets/img/meet_coffee.png" alt="" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Meet & Coffee" /></im></a>
-                        </div>
-                        <div class="col-3">
-                          <a href=""><<img src="assets/img/iguana_page.png" alt="" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Iguana Page" /></im></a>
-                        </div>
-                        <div class="col-3">
-                          <a href=""><<img src="assets/img/cuppon.png" alt="" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Cuppon" /></im></a>
-                        </div>
-                        <div class="col-3">
-                          <a href=""><<img src="assets/img/suricata.png" alt="" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Suricata" /></im></a>
-                        </div>
-                      </div>
-                    </div>
 
-                    <div class="carousel-item text-center">
-                      <div class="row">
-                        <div class="col-3">
-                            <a href=""><<img src="assets/img/ricomida.png" alt="" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Ricomida" /></im></a>
-                        </div>
-                        <div class="col-3">
-                            <a href=""><<img src="assets/img/suricata.png" alt="" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Suricata" /></im></a>
-                        </div>
-                        <div class="col-3">
-                          <a href=""><<img src="assets/img/suricata.png" alt="" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Suricata" /></im></a>
-                        </div>
-                        <div class="col-3">
-                            <a href=""><<img src="assets/img/suricata.png" alt="" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Suricata" /></im></a>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
     </section>
 
     <section>
