--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@
           <p class="display-4 text-left pt-5 mb-5">Rompiendo límites</p>
       </div>
     </header>
-  <hr>
+
     <section>
-      <div id="sobre" class="container pt-5 ">
+      <div id="sobre" class="container pt-4 ">
+        <hr>
         <div class="row">
           <div class="col-md-12 m-2">
           <h1 class="text-center font-weight-bold">Acerca de mí</h1>
@@ -70,105 +71,77 @@
        </div>
 
     <section id="experiencia">
-      <div class="container pt-5 mt-5">
-          <hr>
+      <div class="container pt-4 mt-4">
+<hr>
         <div class="row">
           <div class="col-md-12 m-2">
           <h1 class="text-center font-weight-bold"> Mi Experiencia</h1>
           </div>
           <div class="col-md-6 p-4 text-center">
             <i class="fas fa-user-graduate fa-5x"></i>
-            <p>Tengo cinco años de experiencia como psicóloga organizacional, he trabajado en consultoras de recursos humanos, en el rubro industrial y minero. Me he desempeñado siempre en las áreas de personas en las distintas organizaciones donde he trabajado. He manejado procesos de evaluación de desempeño, evaluación de clima laboral, selección de personas y procesos de capacitación. Lo que en el rubro se conoce como Desarrollo organizacional.</p>
+            <p class="pt-5">Tengo cinco años de experiencia como psicóloga organizacional, he trabajado en consultoras de recursos humanos, en el rubro industrial y minero. Me he desempeñado siempre en las áreas de personas en las distintas organizaciones donde he trabajado. He manejado procesos de evaluación de desempeño, evaluación de clima laboral, selección de personas y procesos de capacitación. Lo que en el rubro se conoce como Desarrollo organizacional.</p>
           </div>
           <div class="col-md-6 p-4 text-center">
             <i class="fas fa-laptop-code fa-5x"></i>
-            <p>Hoy me encuentro trabajando de manera freelance, asesorando en temas de Recursos Humanos, a una consultora de ingeniería hidraúlica, además de estar estudiando la carrera de Full Stack en la academia Desafio Latam. Donde me estoy sumergiendo en el mundo de la programación, en el cual pretendo trabajar durante los próximos años.</p>
+            <p class="pt-5">Hoy me encuentro trabajando de manera freelance, asesorando en temas de Recursos Humanos, a una consultora de ingeniería hidraúlica, además de estar estudiando la carrera de Full Stack en la academia Desafio Latam. Donde me estoy sumergiendo en el mundo de la programación, en el cual pretendo trabajar durante los próximos años.</p>
           </div>
         </div>
       </div>
      </section>
 
     <section id="trabajo">
-      <div class="container my-5 py-3">
+      <div class="container pt-4 ">
+        <hr>
         <div class="row">
           <div class="col-12 p-4 text-center">
             <h1 class="font-weight-bold">Mis trabajos</h1>
           </div>
 
         <div class="row">
-          <div class="card col-md-4 mt-3" >
+          <div class="card col-md-4 mt-3 text-white bg-azul mb-3"  >
               <img src="assets/img/meet_coffee.png" alt="" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Meet & Coffee" /></im>
-                <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                </div>
           </div>
 
-           <div class="card col-md-4 mt-3">
+           <div class="card col-md-4 mt-3 text-white bg-azul mb-3">
               <img src="assets/img/iguana_page.png" alt="" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Iguana Page" /></im>
-              <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              </div>
             </div>
-            <div class="card col-md-4 mt-3" >
+            <div class="card col-md-4 mt-3 text-white bg-azul mb-3">
                <img src="assets/img/cuppon.png" alt="" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Cuppon" /></im>
-               <div class="card-body">
-               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-             </div>
              </div>
 
-            <div class="card col-md-4 mt-3">
+            <div class="card col-md-4 mt-3 text-white bg-azul mb-3" >
                <img src="assets/img/suricata.png" alt="" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Suricata" /></im>
-               <div class="card-body">
-               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-               </div>
             </div>
 
-            <div class="card col-md-4 mt-3">
+            <div class="card col-md-4 mt-3 text-white bg-azul mb-3">
                 <img src="assets/img/ricomida.png" alt="" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Ricomida" /></im>
-                <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                </div>
               </div>
 
-            <div class="card col-md-4 mt-3">
+            <div class="card col-md-4 mt-3 text-white bg-azul mb-3" >
                  <img src="assets/img/dmark.png" alt="" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Dmark" /></im>
-                 <div class="card-body">
-                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                 </div>
                  </div>
             </div>
 
 
-
     </section>
 
-    <section>
 
-    </section>
+    <section id="contact" class="container my-5 pt-5 ">
+      <hr>
+        <h1 class="font-weight-bold text-center ">Contáctame</h1>
 
-    <section>
-
-    </section>
-
-    <section>
-
-    </section>
-
-    <section id="contact" class="container my-5">
-        <h2 class="display-3 font-weight-bold text-center my-4">Contáctame</h2>
-        <p class="text-center my-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-        <div class="typeform-widget" data-url="https://franibe.typeform.com/to/AYVtoJ" style="width: 100%; height: 500px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script> <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;"> powered by <a href="https://admin.typeform.com/signup?utm_campaign=AYVtoJ&utm_source=typeform.com-13260463-Basic&utm_medium=typeform&utm_content=typeform-embedded-poweredbytypeform&utm_term=EN" style="color: #999" target="_blank">Typeform</a> </div>
+        <div class="typeform-widget my-5 pt-5" data-url="https://camila434365.typeform.com/to/lXVDcV" style="width: 100%; height: 300px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script> <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;"> powered by <a href="https://admin.typeform.com/signup?utm_campaign=lXVDcV&utm_source=typeform.com-14821524-Free&utm_medium=typeform&utm_content=typeform-embedded-poweredbytypeform&utm_term=ES" style="color: #999" target="_blank">Typeform</a> </div>
     </section>
 
 
         <footer class="bg-blue text-white text-center p-3">
-          <a href="#"><i class="fab fa-github-square fa-2x m-2"></i>
+          <a href="https://github.com/capafasi"><i class="fab fa-github-square fa-2x m-2"></i>
          </a>
-         <a href="#"><i class="fab fa-instagram fa-2x m-2"></i>
+         <a href="https://www.instagram.com/cpfaundess"><i class="fab fa-instagram fa-2x m-2"></i>
          </a>
-         <a href="#"><i class="fab fa-linkedin fa-2x m-2"></i>
+         <a href="https://cl.linkedin.com/in/camila-fa%C3%BAndes-silva-b84b0996"><i class="fab fa-linkedin fa-2x m-2"></i>
          </a>
-         <a href="#"><i class="fab fa-facebook fa-2x m-2"></i>
+         <a href="https://www.facebook.com/camila.faundes"><i class="fab fa-facebook fa-2x m-2"></i>
          </a>
           <p>Camila Faúndes Silva 2019.
             Todos los derechos reservados.</p>
